# Swarm

./: .env.example  .gitignore  .gitleaks.toml  README.md  requirements-lock.txt  requirements.txt
.github/workflows/: ci.yml  security.yml
.roo/: mcp.json
charts/swarm-worker/: Chart.yaml  README.md  values.yaml
charts/swarm-worker/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  pvc.yaml  secrets.yaml  service.yaml  serviceaccount.yaml
docs/: DEV_GUIDE.md  USER_GUIDE.md
examples/: quicksort.py
plans/: finalization-plan.md  global-improvement-plan.md  swarm-product-architecture.md  swarm-scale-architecture.md
swarm/: __init__.py  config.py  main.py  prompt_compression.py  pyproject.toml  state.py  tracing.py
swarm-mcp/: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
swarm-mcp/src/swarm_mcp/: __init__.py  __main__.py  ask.py  config.py  executor.py  policy.py  server.py  status.py
swarm-mcp/tests/: test_ask.py  test_executor.py  test_policy.py  test_server.py  test_status.py
swarm-scale/: Dockerfile  README.md  pyproject.toml  requirements.txt
swarm-scale/.github/workflows/: deploy.yml
swarm-scale/kubernetes/: deployment.yaml  hpa.yaml  kustomization.yaml
swarm-scale/monitoring/: grafana-dashboard.json  prometheus.yml
swarm-scale/src/swarm_scale/: __init__.py  __main__.py  cache.py  config.py  context.py  metrics.py  model_selector.py  profile.py  queue.py  rate_limiter.py  task.py  worker.py
swarm-scale/tests/: __init__.py  conftest.py  test_cache.py  test_cache_metrics.py  test_cache_properties.py  test_config.py  test_context.py  test_metrics.py  test_model_selector.py  test_model_selector_properties.py  test_profile.py  test_queue.py  test_rate_limiter.py  test_rate_limiter_properties.py  test_task_properties.py  test_worker.py
swarm/agents/: __init__.py  architect.py  base.py  coder.py  reviewer.py
swarm/graph/: __init__.py  workflow.py
swarm/llm/: __init__.py  base.py  config.py  litellm_provider.py
swarm/tests/: test_compression.py  test_mock_swarm.py  test_swarm_properties.py  test_tracing.py
terraform/modules/swarm-aks/: main.tf  outputs.tf  variables.tf
