[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarm-mcp"
version = "1.0.0"
description = "MCP-сервер для роя AI-агентов (Architect -> Coder -> Reviewer)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "swarm",  # pre-install: pip install -e ./swarm
    "mcp>=1.0.0",
]

[project.optional-dependencies]
scale = ["swarm-scale"]

[project.urls]
Homepage = "https://github.com/your-org/swarm-mcp"
Repository = "https://github.com/your-org/swarm-mcp"

[tool.setuptools.packages.find]
where = ["src"]
